--- a/Create_anomalous_boat_data.ipynb
+++ b/Create_anomalous_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Speed       m0c       m1c       acc       lat       lon       sin  \\\n0     5.621329  0.289131 -0.312179 -2.135119 -3.548943  0.897262 -0.928684   \n1     5.138855 -0.821228  1.500425  2.775360 -3.483321  0.875290 -0.915923   \n2     6.231602 -1.660474  2.293065 -3.078832 -3.475313  0.763078 -0.924624   \n3     4.697377  1.195294 -1.928085 -1.876235 -3.434160  0.765237 -0.919457   \n4     4.905521  2.426659 -1.390575  3.904188 -3.454338  0.816576 -0.924536   \n...        ...       ...       ...       ...       ...       ...       ...   \n6595 -1.529504 -0.027810 -0.889648 -0.438932 -2.976241  4.414905  0.987395   \n6596 -0.472938 -0.501245  1.534650  0.101797 -2.975422  4.426089  0.977915   \n6597  0.276292  1.965984 -2.097410 -2.520142 -3.022935  4.434338  0.987892   \n6598 -1.561877  1.110594 -0.095172 -4.424351 -2.954052  4.495397  0.999431   \n6599 -1.726300 -1.457063 -1.140267 -0.872076 -3.001786  4.454672  0.985104   \n\n           cos  \n0    -0.370873  \n1    -0.401355  \n2    -0.380882  \n3    -0.393191  \n4    -0.381094  \n...        ...  \n6595 -0.158276  \n6596 -0.209003  \n6597 -0.155144  \n6598  0.033726  \n6599  0.171960  \n\n[72600 rows x 8 columns]\n"
+      "         Speed       m0c       m1c       acc       lat       lon       sin  \\\n0     4.727042  1.211135  0.319713  0.963110 -3.494182  0.893308 -0.931652   \n1     5.996897 -0.956716  1.968090  1.993158 -3.525949  0.831522 -0.947293   \n2     6.931250 -2.101735  1.150638 -5.347093 -3.467695  0.782439 -0.907227   \n3     4.988403  0.954801  0.482011 -1.175013 -3.443318  0.787395 -0.919837   \n4     5.268159  0.967480 -2.293241 -0.610502 -3.429674  0.795345 -0.922596   \n...        ...       ...       ...       ...       ...       ...       ...   \n6595 -0.518240 -0.720287 -1.202694  1.040152 -2.948955  4.345733  0.980194   \n6596  0.461944 -1.116251  2.872071  0.836972 -3.006043  4.390318  0.990572   \n6597  0.230013 -0.574882 -2.013143 -3.593722 -2.985166  4.421186  0.993796   \n6598 -1.110622  0.585431  0.182326 -3.274700 -2.973222  4.457709  0.999497   \n6599 -1.537429 -0.291918 -0.333150  2.034964 -3.016558  4.439984  0.983534   \n\n           cos  \n0    -0.363352  \n1    -0.320368  \n2    -0.420641  \n3    -0.392301  \n4    -0.385768  \n...        ...  \n6595 -0.198042  \n6596 -0.136995  \n6597 -0.111216  \n6598  0.031716  \n6599  0.180724  \n\n[13200 rows x 8 columns]\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
     "noisy_df['sin'] = sin\n",
     "noisy_df['cos'] = cos\n",
     "\n",
-    "lenght = 10\n",
+    "lenght = 1\n",
     "for i in range(lenght):\n",
     "    new_data = pd.DataFrame(add_noise(devs), columns=columns)\n",
     "    sin, cos = sin_cos()\n",
@@ -98,11 +98,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "noisy_df.to_csv(\"Data/Boat_anomalous_Big.csv\")"
+    "noisy_df.to_csv(\"Data/Boat_anomalous_validation.csv\")"
    ]
   },
   {
