--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,9 +164,9 @@
     "    # plt.plot(cosins)\n",
     "    # plt.show()\n",
     "    # \n",
-    "    print(len(dgr))\n",
-    "    plt.plot(dgr)\n",
-    "    plt.show()\n",
+    "    # print(len(dgr))\n",
+    "    # plt.plot(dgr)\n",
+    "    # plt.show()\n",
     "    \n",
     "    df = pd.DataFrame(columns=columns)\n",
     "    df[\"Speed\"] = spd\n",
@@ -339,27 +339,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "663\n663\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        Speed       Sin     Cosin  Acceleration       M0C       M1C  \\\n0    0.562347 -0.953721 -0.300692     -0.402994 -0.434089  1.541512   \n1    0.207177 -0.835183 -0.549973     -1.071442  0.061426  0.429718   \n2    0.722525 -0.918397 -0.395660      0.890368  1.174815  0.102608   \n3    0.630311 -0.942976 -0.332861     -0.446787 -0.120837  0.344915   \n4    0.687814 -0.847334 -0.531061      0.972372  0.923506  0.475968   \n..        ...       ...       ...           ...       ...       ...   \n651 -0.630819  0.954477  0.298284      0.182359 -0.095564 -0.421312   \n652 -0.516871  0.914531  0.404515      1.220277  0.276551 -0.063628   \n653 -0.632480  0.942287  0.334806      0.825813 -0.239003  0.524423   \n654 -0.525899  0.923605  0.383346      0.511892  0.492500  0.397722   \n655 -0.806527  0.909393  0.415938      0.854781 -0.116333  0.438850   \n\n           Lat        Lon  \n0    45.359670  11.020598  \n1    45.359730  11.020580  \n2    45.359781  11.020562  \n3    45.359838  11.020545  \n4    45.359890  11.020532  \n..         ...        ...  \n651  45.360442  11.021112  \n652  45.360385  11.021130  \n653  45.360334  11.021150  \n654  45.360261  11.021158  \n655  45.360222  11.021174  \n\n[1312 rows x 8 columns]\n"
+      "        Speed       Sin     Cosin  Acceleration       M0C       M1C  \\\n0    0.684053 -0.905635 -0.424059     -0.020241  0.760359  0.839897   \n1    0.532341 -0.930357 -0.366654     -0.494499  0.509074  0.025151   \n2    0.025358 -0.886622 -0.462495     -0.437766  0.575773 -0.116081   \n3    0.849382 -0.940413 -0.340034      0.270971 -0.362658  0.004421   \n4    0.465634 -0.913886 -0.405970     -0.987736 -0.323611 -0.475731   \n..        ...       ...       ...           ...       ...       ...   \n651 -0.581838  0.895722  0.444614     -0.336114  0.550401  0.217290   \n652 -1.044861  0.897496  0.441022     -0.147302 -0.117672 -0.497628   \n653 -0.400650  0.959958  0.280145     -1.308335  0.089513 -0.097186   \n654 -0.065780  0.917120  0.398612     -0.400937  0.623984  0.132699   \n655 -0.339843  0.945779  0.324810      1.044522  0.229273 -0.256973   \n\n           Lat        Lon  \n0    45.359669  11.020597  \n1    45.359726  11.020581  \n2    45.359771  11.020564  \n3    45.359829  11.020548  \n4    45.359885  11.020524  \n..         ...        ...  \n651  45.360438  11.021117  \n652  45.360383  11.021125  \n653  45.360318  11.021140  \n654  45.360274  11.021161  \n655  45.360222  11.021178  \n\n[430992 rows x 8 columns]\n"
      ]
     }
    ],
    "source": [
     "df = create_data_short()\n",
-    "for i in range(100):\n",
+    "for i in range(656):\n",
     "    data = create_data_short()\n",
     "    # choice = np.random.choice(3, 1)\n",
     "    # if choice == 0:\n",
@@ -396,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +397,7 @@
     "#     name = \"Data/Boat_nominal_data/sequences/Boat_sequence^\" + str(i) + \".csv\"\n",
     "#     elem.to_csv(name)\n",
     "\n",
-    "df = df.to_csv(\"Data/Boat_nominal_data/Boat_sequences.csv\")\n"
+    "df = df.to_csv(\"Data/Boat_nominal_data/Boat_nominal_long.csv\")\n"
    ]
   },
   {
