Conv1d+vae compressor

--- a/Conv_Ae.ipynb
+++ b/Conv_Ae.ipynb
@@ -2,11 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
