Data mixed with anom

--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,9 @@
     "\n",
     "vertical_length = 77\n",
     "orizontal_length = 10\n",
+    "deg_var = 1\n",
     "\n",
-    "def create_data_short():\n",
+    "def create_nom_data():\n",
     "    \n",
     "    def headingFromCoordinates(lat1, lon1, lat2, lon2): \n",
     "        if(lon2-lon1 < 0): #2nd and 3rd quadrant \n",
@@ -37,33 +38,33 @@
     "    for i in range(5):\n",
     "        for i in range(vertical_length):\n",
     "            spd.append(np.random.normal(0.5, 0.3))\n",
-    "            dgr.append(np.random.normal(107.5, 5))\n",
+    "            dgr.append(np.random.normal(107.5, deg_var))\n",
     "        for i in range(orizontal_length):\n",
     "            spd.append(np.random.normal(0, 0.3))\n",
-    "            dgr.append(np.random.normal(7.5, 5))\n",
+    "            dgr.append(np.random.normal(7.5, deg_var))\n",
     "        for i in range(vertical_length):\n",
     "            spd.append(np.random.normal(-0.5, 0.3))\n",
-    "            dgr.append(np.random.normal(287.5, 5))\n",
+    "            dgr.append(np.random.normal(287.5, deg_var))\n",
     "        for i in range(orizontal_length):\n",
     "            spd.append(np.random.normal(0, 0.3))\n",
-    "            dgr.append(np.random.normal(7.5, 5))\n",
+    "            dgr.append(np.random.normal(7.5, deg_var))\n",
     "    \n",
     "    \n",
     "    \n",
     "    for i in range(vertical_length):\n",
     "        spd.append(np.random.normal(0.5, 0.3))\n",
-    "        dgr.append(np.random.normal(107.5, 5))\n",
+    "        dgr.append(np.random.normal(107.5, deg_var))\n",
     "    for i in range(orizontal_length):\n",
     "        spd.append(np.random.normal(0, 0.3))\n",
-    "        dgr.append(np.random.normal(7.5, 5))\n",
+    "        dgr.append(np.random.normal(7.5, deg_var))\n",
     "    for i in range(vertical_length):\n",
     "        spd.append(np.random.normal(-0.5, 0.3))\n",
-    "        dgr.append(np.random.normal(287.5, 5))\n",
+    "        dgr.append(np.random.normal(287.5, deg_var))\n",
     "    \n",
-    "    for i in range(len(dgr)):\n",
-    "        dgr[i] = dgr[i] + 140\n",
-    "        if dgr[i] > 360:\n",
-    "            dgr[i] = dgr[i] - 360    \n",
+    "    # for i in range(len(dgr)):\n",
+    "    #     dgr[i] = dgr[i] + 140\n",
+    "    #     if dgr[i] > 360:\n",
+    "    #         dgr[i] = dgr[i] - 360    \n",
     "    \n",
     "    \n",
     "    m = np.mean(df['acceleration'])\n",
@@ -108,6 +109,7 @@
     "        return coord + noise\n",
     "    \n",
     "    \n",
+    "    \n",
     "    for i, elem in enumerate(lats):\n",
     "        lats[i] = noise_lat(elem)   \n",
     "    \n",
@@ -124,6 +126,7 @@
     "        start_lon = lons[i]\n",
     "        g_lat.append(start_lat)\n",
     "        g_lon.append(start_lon)\n",
+    "        \n",
     "        \n",
     "        l = sqrt((lons[i + 1] - lons[i]) ** 2 + (lats[i + 1] - lats[i]) ** 2)\n",
     "        \n",
@@ -163,15 +166,6 @@
     "               \"Acceleration\", \"M0C\", \n",
     "               \"M1C\", \"Lat\", \"Lon\"]\n",
     "    \n",
-    "    # print(len(sins), len(cosins))\n",
-    "    # plt.plot(sins)\n",
-    "    # plt.plot(cosins)\n",
-    "    # plt.show()\n",
-    "    # \n",
-    "    # print(len(dgr))\n",
-    "    # plt.plot(dgr)\n",
-    "    # plt.show()\n",
-    "    \n",
     "    df = pd.DataFrame(columns=columns)\n",
     "    df[\"Speed\"] = spd\n",
     "    df[\"Sin\"] = sins\n",
@@ -190,40 +184,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def create_anom_data():\n",
+    "    def headingFromCoordinates(lat1, lon1, lat2, lon2): \n",
+    "        if(lon2-lon1 < 0): #2nd and 3rd quadrant \n",
+    "            heading =180 - degrees(np.arcsin((lat2-lat1)/(sqrt((lat2-lat1)**2 + (lon2-lon1)**2)))) \n",
+    "        elif(lat2-lat1 < 0): #4th quadrant\n",
+    "            heading = 360 + degrees(np.arcsin((lat2-lat1)/(sqrt((lat2-lat1)**2 + (lon2-lon1)**2))))\n",
+    "        else:\n",
+    "            heading = degrees(np.arcsin((lat2-lat1)/(sqrt((lat2-lat1)**2 + (lon2-lon1)**2)))) #1st quadrant            \n",
+    "        return heading\n",
+    "    df = pd.read_csv('Data/Raw_boat_data')\n",
+    "    df = df[210:6830]\n",
+    "    \n",
+    "    spd = []\n",
+    "    dgr = []\n",
+    "    \n",
+    "    for i in range(5):\n",
+    "        for i in range(vertical_length):\n",
+    "            spd.append(np.random.normal(0.5, 0.3))\n",
+    "            dgr.append(np.random.normal(107.5, deg_var))\n",
+    "        for i in range(orizontal_length):\n",
+    "            spd.append(np.random.normal(0, 0.3))\n",
+    "            dgr.append(np.random.normal(7.5, deg_var))\n",
+    "        for i in range(vertical_length):\n",
+    "            spd.append(np.random.normal(-0.5, 0.3))\n",
+    "            dgr.append(np.random.normal(287.5, deg_var))\n",
+    "        for i in range(orizontal_length):\n",
+    "            spd.append(np.random.normal(0, 0.3))\n",
+    "            dgr.append(np.random.normal(7.5, deg_var))\n",
+    "            \n",
+    "    for i in range(vertical_length):\n",
+    "        spd.append(np.random.normal(0.5, 0.3))\n",
+    "        dgr.append(np.random.normal(107.5, deg_var))\n",
+    "    for i in range(orizontal_length):\n",
+    "        spd.append(np.random.normal(0, 0.3))\n",
+    "        dgr.append(np.random.normal(7.5, deg_var))\n",
+    "    for i in range(vertical_length):\n",
+    "        spd.append(np.random.normal(-0.5, 0.3))\n",
+    "        dgr.append(np.random.normal(287.5, deg_var))\n",
+    "    \n",
+    "    \n",
+    "    # for i in range(len(dgr)):\n",
+    "    #     dgr[i] = dgr[i] + 140\n",
+    "    #     if dgr[i] > 360:\n",
+    "    #         dgr[i] = dgr[i] - 360    \n",
+    "    \n",
+    "    m = np.mean(df['acceleration'])\n",
+    "    s = np.std(df['acceleration'])\n",
+    "    \n",
+    "    acc = np.random.normal(m, s-0.2, len(spd))\n",
+    "    \n",
+    "    m0c = np.random.normal(0, 0.5, len(spd))\n",
+    "\n",
+    "    m1c = np.random.normal(0, 0.5, len(spd))\n",
+    "\n",
+    "        \n",
+    "    lats = [45.3596665575, 45.36225589, 45.36226747, 45.35967972, 45.35969351, 45.36227073,\n",
+    "            45.36228557, 45.35970006, 45.35971575, 45.36230304, 45.36230583,\n",
+    "            45.35971167, 45.35972416, 45.36232427, 45.36232928, 45.35974926,\n",
+    "            45.359755  , 45.36234141, 45.3623531 , 45.35975891, 45.35976923,\n",
+    "            45.36236122, 45.36236823, 45.3597792384]\n",
+    "    \n",
+    "    lons = [11.020597651, 11.01979384, 11.01985461, 11.02066511, 11.02074007, 11.01991931,\n",
+    "            11.0199881 , 11.02079678, 11.02087983, 11.02006662, 11.02012215,\n",
+    "            11.02093044 , 11.02100831, 11.02020208, 11.02025402, 11.02108572,\n",
+    "            11.02115422, 11.02033527, 11.02038858, 11.02118961, 11.02124338,\n",
+    "            11.02045991, 11.02053796, 11.0213068174]\n",
+    "    \n",
+    "    variance_lat = 0.000005\n",
+    "    variance_lon = 0.000002\n",
+    "    \n",
+    "    def noise_lon(coord):\n",
+    "        noise = coord - np.random.normal(coord, variance_lon)\n",
+    "        return coord + noise\n",
+    "    \n",
+    "    def noise_lat(coord):\n",
+    "        noise = coord - np.random.normal(coord, variance_lat)\n",
+    "        return coord + noise\n",
+    "    \n",
+    "    k = np.linspace(-3,3, vertical_length+1) \n",
+    "    \n",
+    "    def modify_angle(angle, index):\n",
+    "        change = 5*2.5*np.exp(-np.power(k[index], 2.) / (2 * np.power(1, 2.)))\n",
+    "        return angle - change\n",
+    "    \n",
+    "    for i, elem in enumerate(lats):\n",
+    "        lats[i] = noise_lat(elem)   \n",
+    "    \n",
+    "    for j,elem in enumerate(lons):\n",
+    "        lons[j] = noise_lon(elem)\n",
+    "    \n",
+    "    g_lat = []\n",
+    "    \n",
+    "    g_lon = []\n",
+    "    \n",
+    "    dgr_mod = []\n",
+    "    \n",
+    "    for i in range(len(lats) - 1):\n",
+    "        start_lat = lats[i]\n",
+    "        start_lon = lons[i]\n",
+    "        g_lat.append(start_lat)\n",
+    "        g_lon.append(start_lon)\n",
+    "        l = sqrt((lons[i + 1] - lons[i]) ** 2 + (lats[i + 1] - lats[i]) ** 2)\n",
+    "        \n",
+    "        if i % 4 == 0:\n",
+    "            dl = l / vertical_length\n",
+    "            alpha = 180 - headingFromCoordinates(lats[i], lons[i], lats[i + 1], lons[i + 1])\n",
+    "            for j in range(1, vertical_length):\n",
+    "                dgr_mod.append(alpha+40)\n",
+    "                g_lon.append(noise_lon((start_lon - (j * dl * cos(radians(alpha))))))\n",
+    "                g_lat.append(noise_lat(start_lat + (j * dl * sin(radians(alpha)))))\n",
+    "        if i % 4 == 1:\n",
+    "            dl = l / orizontal_length\n",
+    "            alpha = headingFromCoordinates(lats[i], lons[i], lats[i + 1], lons[i + 1])\n",
+    "            for j in range(1, orizontal_length):\n",
+    "                dgr_mod.append(alpha)\n",
+    "                g_lon.append(noise_lon(start_lon + (j * dl * cos(radians(alpha)))))\n",
+    "                g_lat.append(noise_lat(start_lat + (j * dl * sin(radians(alpha)))))\n",
+    "        if i % 4 == 2:\n",
+    "            dl = l / vertical_length\n",
+    "            alpha = headingFromCoordinates(lats[i], lons[i], lats[i + 1], lons[i + 1])\n",
+    "            for j in range(1, vertical_length):\n",
+    "                alpha_m = modify_angle(alpha, j)\n",
+    "                dgr_mod.append(alpha_m)\n",
+    "                g_lon.append(noise_lon(start_lon + (j * dl * cos(radians(alpha_m)))))\n",
+    "                g_lat.append(noise_lat(start_lat + (j * dl * sin(radians(alpha_m)))))\n",
+    "        if i % 4 == 3:\n",
+    "            dl = l / orizontal_length\n",
+    "            alpha = headingFromCoordinates(lats[i], lons[i], lats[i + 1], lons[i + 1])\n",
+    "            for j in range(1, orizontal_length):\n",
+    "                dgr_mod.append(alpha)\n",
+    "                g_lon.append(noise_lon(start_lon + (j * dl * cos(radians(alpha)))))\n",
+    "                g_lat.append(noise_lat(start_lat + (j * dl * sin(radians(alpha)))))\n",
+    "    \n",
+    "    def modify_degrees():\n",
+    "        dgr_mod = []\n",
+    "        index = 1\n",
+    "        for i, deg in enumerate(dgr):\n",
+    "            if abs(deg - 287.5) < 10:\n",
+    "                dgr_mod.append(modify_angle(deg,index))    \n",
+    "                index += 1\n",
+    "            else:\n",
+    "                dgr_mod.append(deg)\n",
+    "                index = 1      \n",
+    "        return dgr_mod\n",
+    "    \n",
+    "    dgr_mod = modify_degrees()\n",
+    "    \n",
+    "    sins = []\n",
+    "    cosins = []\n",
+    "    for i, degree in enumerate(dgr_mod):\n",
+    "        sins.append(np.sin(np.deg2rad(degree)))\n",
+    "        cosins.append(np.cos(np.deg2rad(degree)))\n",
+    "           \n",
+    "    columns = [\"Speed\", \"Sin\", \"Cosin\", \n",
+    "               \"Acceleration\", \"M0C\", \n",
+    "               \"M1C\", \"Lat\", \"Lon\"]\n",
+    "    \n",
+    "    # plt.plot(sins)\n",
+    "    # plt.show()\n",
+    "    # plt.plot(cosins)\n",
+    "    # plt.show()\n",
+    "    # \n",
+    "    # plt.plot(dgr)\n",
+    "    # plt.plot(dgr_mod)\n",
+    "    # plt.show()\n",
+    "\n",
+    "    df = pd.DataFrame(columns=columns)\n",
+    "    df[\"Speed\"] = spd\n",
+    "    df[\"Sin\"] = sins\n",
+    "    df[\"Cosin\"] = cosins\n",
+    "    df[\"Acceleration\"] = acc\n",
+    "    df[\"M0C\"] = m0c\n",
+    "    df[\"M1C\"] = m1c\n",
+    "    df[\"Lat\"] = g_lat\n",
+    "    df[\"Lon\"] = g_lon\n",
+    "    \n",
+    "    df = df.drop(df.index[-10:])\n",
+    "    \n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Speed       Sin     Cosin  Acceleration       M0C       M1C  \\\n0     1.133309 -0.936406 -0.350917     -0.485694  0.510700 -0.988781   \n1     0.472815 -0.970093 -0.242732     -0.225197 -0.392356 -0.251745   \n2     0.106405 -0.857418 -0.514620     -0.020861  0.285421  0.647040   \n3     0.868479 -0.883803 -0.467859     -0.916502 -0.057443 -0.470730   \n4     0.780787 -0.875559 -0.483111     -0.334817 -0.347971 -0.848157   \n...        ...       ...       ...           ...       ...       ...   \n1019 -0.822567  0.946247  0.323444     -1.562378 -0.030465  0.036135   \n1020 -0.473991  0.897345  0.441329     -1.252587 -0.274814 -0.218052   \n1021 -0.699133  0.914698  0.404137     -1.563437  0.330764 -0.037555   \n1022 -0.764374  0.878833  0.477129      1.621202  0.341229 -0.562694   \n1023 -0.477115  0.955964  0.293483      0.267929 -0.198414  0.100223   \n\n            Lat        Lon  \n0     45.359665  11.020597  \n1     45.359697  11.020587  \n2     45.359730  11.020577  \n3     45.359762  11.020567  \n4     45.359796  11.020557  \n...         ...        ...  \n1019  45.360279  11.021156  \n1020  45.360241  11.021166  \n1021  45.360222  11.021175  \n1022  45.360175  11.021187  \n1023  45.360140  11.021200  \n\n[308224 rows x 8 columns]\n"
+      "9 1\n         Speed       Sin     Cosin  Acceleration       M0C       M1C  \\\n0     0.694224  0.951579 -0.307404      0.134029 -0.109141  0.278694   \n1     0.437346  0.953400 -0.301711     -0.423479  0.495006  0.427561   \n2     0.574829  0.956804 -0.290735      0.749896  0.378886  0.289289   \n3     0.793624  0.946517 -0.322655      0.551973 -0.037791 -1.033736   \n4     0.213150  0.953171 -0.302431      0.297228 -0.494704  0.067503   \n...        ...       ...       ...           ...       ...       ...   \n1019 -0.468116 -0.953008  0.302947     -1.458463 -0.008439 -0.205802   \n1020 -0.709632 -0.957587  0.288143      0.533824 -0.287497 -1.077013   \n1021 -0.607950 -0.948359  0.317200     -1.554519  1.321980 -0.069694   \n1022 -0.645850 -0.955333  0.295530      0.343614  0.624283 -0.132441   \n1023 -0.076142 -0.952433  0.304749     -1.094580 -0.172358 -0.199350   \n\n            Lat        Lon  \n0     45.359665  11.020597  \n1     45.359698  11.020588  \n2     45.359726  11.020571  \n3     45.359766  11.020566  \n4     45.359801  11.020554  \n...         ...        ...  \n1019  45.360267  11.021155  \n1020  45.360251  11.021170  \n1021  45.360223  11.021179  \n1022  45.360181  11.021186  \n1023  45.360142  11.021196  \n\n[11264 rows x 8 columns]\n"
      ]
     }
    ],
    "source": [
-    "df = create_data_short()\n",
-    "for i in range(300):\n",
-    "    data = create_data_short()\n",
-    "    # choice = np.random.choice(3, 1)\n",
-    "    # if choice == 0:\n",
-    "    #     data[331:] = np.zeros((663-331,7))\n",
-    "    # elif choice == 1:\n",
-    "    #     data[:332] = np.zeros((332,7))\n",
+    "df = create_nom_data()\n",
+    "nom_list = []\n",
+    "anom_list = []\n",
+    "for i in range(10):\n",
+    "    choice = np.random.choice([0,1], p=[1./5,4./5])\n",
+    "    if choice == 0:\n",
+    "        anom_list.append(1)\n",
+    "        data = create_anom_data()\n",
+    "    else:\n",
+    "        nom_list.append(1)\n",
+    "        data = create_nom_data()\n",
     "    df = df.append(data)\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "print(len(nom_list), len(anom_list))\n",
     "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "df = df.to_csv(\"Data/Boat_nominal_data/Boat_nominal_sequences.csv\")\n"
+    "df = df.to_csv(\"Data/Boat_nominal_data/Boat_sequences_mix_val.csv\")\n"
    ]
   },
   {
