Trying clustering nominal vs anomalous

--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,43 +373,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9 1\n         Speed       Sin     Cosin  Acceleration       M0C       M1C  \\\n0     0.694224  0.951579 -0.307404      0.134029 -0.109141  0.278694   \n1     0.437346  0.953400 -0.301711     -0.423479  0.495006  0.427561   \n2     0.574829  0.956804 -0.290735      0.749896  0.378886  0.289289   \n3     0.793624  0.946517 -0.322655      0.551973 -0.037791 -1.033736   \n4     0.213150  0.953171 -0.302431      0.297228 -0.494704  0.067503   \n...        ...       ...       ...           ...       ...       ...   \n1019 -0.468116 -0.953008  0.302947     -1.458463 -0.008439 -0.205802   \n1020 -0.709632 -0.957587  0.288143      0.533824 -0.287497 -1.077013   \n1021 -0.607950 -0.948359  0.317200     -1.554519  1.321980 -0.069694   \n1022 -0.645850 -0.955333  0.295530      0.343614  0.624283 -0.132441   \n1023 -0.076142 -0.952433  0.304749     -1.094580 -0.172358 -0.199350   \n\n            Lat        Lon  \n0     45.359665  11.020597  \n1     45.359698  11.020588  \n2     45.359726  11.020571  \n3     45.359766  11.020566  \n4     45.359801  11.020554  \n...         ...        ...  \n1019  45.360267  11.021155  \n1020  45.360251  11.021170  \n1021  45.360223  11.021179  \n1022  45.360181  11.021186  \n1023  45.360142  11.021196  \n\n[11264 rows x 8 columns]\n"
+      "500\n         Speed       Sin     Cosin  Acceleration       M0C       M1C  \\\n0     0.365549  0.948075 -0.318046      0.071897  0.911008 -0.209037   \n1     0.465712  0.954596 -0.297903      0.764416 -0.784567 -0.385838   \n2     0.764492  0.948937 -0.315464     -0.497033 -0.100312  0.063545   \n3     0.259352  0.958721 -0.284349      0.477849 -0.146114  1.469415   \n4     1.034838  0.947600 -0.319458      0.406465  0.069245  0.284472   \n...        ...       ...       ...           ...       ...       ...   \n1019 -0.486616 -0.943421  0.331596     -1.272381  0.632360  0.355499   \n1020  0.170597 -0.948332  0.317279     -0.024795 -0.389431  0.169012   \n1021 -0.658423 -0.949425  0.313994     -0.562490 -0.066209  0.795745   \n1022 -0.818889 -0.950546  0.310585      0.063343 -0.688112 -0.172222   \n1023 -0.550545 -0.950596  0.310430     -0.885463 -0.761446 -0.865221   \n\n            Lat        Lon  \n0     45.359666  11.020599  \n1     45.359701  11.020589  \n2     45.359722  11.020579  \n3     45.359760  11.020568  \n4     45.359805  11.020557  \n...         ...        ...  \n1019  45.360273  11.021156  \n1020  45.360249  11.021162  \n1021  45.360214  11.021174  \n1022  45.360172  11.021187  \n1023  45.360146  11.021196  \n\n[513024 rows x 8 columns]\n"
      ]
     }
    ],
    "source": [
     "df = create_nom_data()\n",
     "nom_list = []\n",
-    "anom_list = []\n",
-    "for i in range(10):\n",
+    "for i in range(500):\n",
     "    choice = np.random.choice([0,1], p=[1./5,4./5])\n",
     "    if choice == 0:\n",
-    "        anom_list.append(1)\n",
+    "        nom_list.append(0)\n",
     "        data = create_anom_data()\n",
     "    else:\n",
     "        nom_list.append(1)\n",
     "        data = create_nom_data()\n",
     "    df = df.append(data)\n",
     "\n",
-    "print(len(nom_list), len(anom_list))\n",
+    "print(len(nom_list))\n",
+    "label_df = pd.DataFrame(np.array(nom_list), columns=['label'])\n",
     "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "df = df.to_csv(\"Data/Boat_nominal_data/Boat_sequences_mix_val.csv\")\n"
+    "df = df.to_csv(\"Data/Boat_nominal_data/Boat_sequences_mix.csv\")\n",
+    "label_df.to_csv(\"Data/Boat_nominal_data/Boat_mix_labels.csv\")"
    ]
   },
   {
